--- a/floreria/package.json
+++ b/floreria/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "firebase": "^7.8.2",
     "jquery": "^3.4.1",
     "ngx-spinner": "^8.1.0",
     "popper.js": "^1.16.1",
